--- a/app/upload/templates/upload.html
+++ b/app/upload/templates/upload.html
@@ -4,8 +4,10 @@
 
   <form action="{% url "upload" %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="file" name="image_file">
-    <input type="submit" value="submit" />
+
+    <img src="/static/img/connor.png"/><br><br>
+    <input type="file" name="image_file" disabled>
+    <input type="submit" value="submit" disabled />
   </form>
 
   {% if image_url %}
