--- a/app/upload/templates/upload.html
+++ b/app/upload/templates/upload.html
@@ -1,11 +1,13 @@
 {% block content %}
+{% load static %}
+
   
-  <h3>Hi Fabiola Osario!</h3>
+  <h3>Hi Connor!</h3>
 
   <form action="{% url "upload" %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
-    <img src="/static/img/connor.png"/><br><br>
+    <img src="{% static 'img/connor.png' %}"/><br><br>
     <input type="file" name="image_file" disabled>
     <input type="submit" value="submit" disabled />
   </form>
