--- a/app/frontend/templates/frontend/index.html
+++ b/app/frontend/templates/frontend/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}" />
     </head>
     <body>
-        <div id="main">
+        <div id="main" class="parallax">
             <div id="app"></div>
         </div>
 
