--- a/app/frontend/static/css/index.css
+++ b/app/frontend/static/css/index.css
@@ -1,7 +1,25 @@
+@font-face {
+    font-family: 'Roboto';
+    src:  url('./fonts/Roboto/Roboto-Black.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-BlackItalic.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-Bold.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-BoldItalic.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-Italic.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-Light.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-LightItalic.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-Medium.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-MediumItalic.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-Regular.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-Thin.ttf') format('ttf'),
+          url('./fonts/Roboto/Roboto-ThinItalic.ttf') format('ttf');
+}
+
+
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto';
 }
 
 #main {
@@ -74,7 +92,7 @@ html, body {
     text-transform: uppercase;
     color: #fff;
     font-weight: 700;
-    font-size: 1.75em;
+    font-size: 3vw;
     transition: opacity 350ms;
 }
 
@@ -167,5 +185,15 @@ html, body {
 
     .honeycomb-cell.mid-last {
         margin-right: 4.5%;
+    }
+
+    .honeycomb-cell__title {
+        font-size: 4vw;
+    }
+}
+
+@media only screen and (min-width: 1361px) {
+    .honeycomb-cell__title {
+        font-size: 37px;
     }
 }
