--- a/app/frontend/static/css/index.css
+++ b/app/frontend/static/css/index.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Roboto';
     src:  url('./fonts/Roboto/Roboto-Black.ttf') format('ttf'),
           url('./fonts/Roboto/Roboto-BlackItalic.ttf') format('ttf'),
@@ -12,7 +12,7 @@
           url('./fonts/Roboto/Roboto-Regular.ttf') format('ttf'),
           url('./fonts/Roboto/Roboto-Thin.ttf') format('ttf'),
           url('./fonts/Roboto/Roboto-ThinItalic.ttf') format('ttf');
-}
+} */
 
 
 html, body {
@@ -65,13 +65,36 @@ html, body {
     height: 100%;
     left: 0;
     top: 0;
-    padding: 50px 10px 0px 10px;
+    /* padding: 50px 10px 0px 10px; */
 }
 
 #app {
     width: 100%;
     height: 100%;
+    /* display: flex; */
+}
+
+.sign-in-form {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.form-title {
+    margin: 15px;
+    font-weight: bold;
+}
+
+.form-fields-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-fields-row input {
+    margin: 5px;
 }
 
 *,
