--- a/app/frontend/static/css/index.css
+++ b/app/frontend/static/css/index.css
@@ -97,6 +97,27 @@ html, body {
     margin: 5px;
 }
 
+.hex-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #FFF;
+    padding: 50px;
+    z-index: 1001;
+    border: 3px solid black;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0 0 0 / 43%);
+    z-index: 1000;
+}
+
 *,
 *::before,
 *::after {
