--- a/app/frontend/templates/frontend/index.html
+++ b/app/frontend/templates/frontend/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE Hhtml>
-<html>
+<html data-theme="light" data-layout-mode="detached">
     <head>
         <meta charset="UTF-8" />
         <meta name='viewport' content="width=device-width, initial-scale=1" />
         <title>Dunne Web</title>
         {% load static %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+        {% comment %} <script src="{% static "js/hyper-config.js" %}"></script> {% endcomment %}
+
         <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}" />
+
+        <!-- App favicon -->
+        <link rel="shortcut icon" href="{% static "assets/images/favicon.ico" %}">
+
+        <!-- Theme Config Js -->
+        <script src="{% static "assets/js/hyper-config.js" %}"></script>
+
+        <!-- Icons css -->
+        <link href="{% static "assets/css/icons.min.css" %}" rel="stylesheet" type="text/css" />
+
+        <!-- App css -->
+        <link href="{% static "assets/css/app-modern.min.css" %}" rel="stylesheet" type="text/css" id="app-style" />
     </head>
     <body>
         <div id="main">
@@ -17,7 +30,12 @@
             <div id="portal"></div>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <!-- Vendor js -->
+        <script src="{% static "assets/js/vendor.min.js" %}"></script>
+
+        <!-- App js -->
+        <script src="{% static "assets/js/app.min.js" %}"></script>
+        
         <script src="{% static "frontend/main.js" %}"></script>
     </body>
 </html>
