working get all marvel omnis and display in cards

--- a/app/frontend/templates/frontend/index.html
+++ b/app/frontend/templates/frontend/index.html
@@ -24,10 +24,12 @@
         <!-- App css -->
         <link href="{% static "assets/css/app-modern.min.css" %}" rel="stylesheet" type="text/css" id="app-style" />
     </head>
-    <body>
-        <div id="main">
-            <div id="app"></div>
-            <div id="portal"></div>
+    <body class="show">
+        <div class="wrapper">
+            <div id="main">
+                <div id="app"></div>
+                <div id="portal"></div>
+            </div>
         </div>
 
         <!-- Vendor js -->
