--- a/app/frontend/static/css/index.css
+++ b/app/frontend/static/css/index.css
@@ -1,19 +1,3 @@
-/* @font-face {
-    font-family: 'Roboto';
-    src:  url('./fonts/Roboto/Roboto-Black.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-BlackItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Bold.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-BoldItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Italic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Light.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-LightItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Medium.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-MediumItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Regular.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Thin.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-ThinItalic.ttf') format('ttf');
-} */
-
 
 html, body {
     height: 100%;
@@ -62,9 +46,10 @@ html, body {
 #main {
     position: fixed;
     width: 100%;
-    height: 100%;
+    max-height: calc(100% - 62px);
     left: 0;
-    top: 0;
+    top: 62px;
+    overflow-y: auto;
     /* padding: 50px 10px 0px 10px; */
 }
 
@@ -72,6 +57,17 @@ html, body {
     width: 100%;
     height: 100%;
     /* display: flex; */
+}
+
+.navbar {
+    position: fixed! important;
+    width: 100vw;
+    z-index: 1000;
+    top: 0px;
+}
+
+.content-page {
+    padding-top: 0px! important;
 }
 
 .sign-in-form {
@@ -342,7 +338,6 @@ html, body {
     align-items: center;
     width: 100%;
     padding: 20px;
-    position: absolute;
 }
 
 .admin-page-btn {
@@ -365,7 +360,7 @@ html, body {
 }
 
 .form-signin .form-floating:focus-within {
-z-index: 2;
+    z-index: 2;
 }
 
 .form-signin .username {
@@ -378,4 +373,14 @@ z-index: 2;
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+
+.omni-list-card img {
+    height: 200px;
+    object-fit: contain;
+}
+
+.omni-list-card .card-text {
+    height: 130px;
+    overflow: auto;
 }
