--- a/app/frontend/static/css/index.css
+++ b/app/frontend/static/css/index.css
@@ -68,6 +68,11 @@ html, body {
 
 .content-page {
     padding-top: 0px! important;
+    padding-left: 22px! important;
+}
+
+.leftside-menu.menuitem-active {
+    margin-left: 10px;
 }
 
 .sign-in-form {
