--- a/app/frontend/templates/frontend/index.html
+++ b/app/frontend/templates/frontend/index.html
@@ -12,6 +12,8 @@
         <!-- CSS only -->
         <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}" />
 
+        {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> {% endcomment %}
+
         <!-- App favicon -->
         <link rel="shortcut icon" href="{% static "assets/images/favicon.ico" %}">
 
