--- a/app/staticfiles/css/index.css
+++ b/app/staticfiles/css/index.css
@@ -1,19 +1,3 @@
-@font-face {
-    font-family: 'Roboto';
-    src:  url('./fonts/Roboto/Roboto-Black.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-BlackItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Bold.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-BoldItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Italic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Light.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-LightItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Medium.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-MediumItalic.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Regular.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-Thin.ttf') format('ttf'),
-          url('./fonts/Roboto/Roboto-ThinItalic.ttf') format('ttf');
-}
-
 
 html, body {
     height: 100%;
@@ -48,28 +32,91 @@ html, body {
     justify-content: flex-end;
 }
 
-#header #sign-in-btn {
+#header .header-btn {
     background: #4848d2;
     padding: 7px 15px;
     border-radius: 15px;
     font-weight: bold;
     color: white;
     cursor: pointer;
+    margin: 5px;
 }
+
 
 #main {
     position: fixed;
     width: 100%;
-    height: 100%;
+    max-height: calc(100% - 62px);
     left: 0;
-    top: 0;
-    padding: 50px 10px 0px 10px;
+    top: 62px;
+    overflow-y: auto;
+    /* padding: 50px 10px 0px 10px; */
 }
 
 #app {
     width: 100%;
     height: 100%;
+    /* display: flex; */
+}
+
+.navbar {
+    position: fixed! important;
+    width: 100vw;
+    z-index: 1000;
+    top: 0px;
+}
+
+.content-page {
+    padding-top: 0px! important;
+    padding-left: 22px! important;
+}
+
+.leftside-menu.menuitem-active {
+    margin-left: 10px;
+}
+
+.sign-in-form {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.form-title {
+    margin: 15px;
+    font-weight: bold;
+}
+
+.form-fields-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-fields-row input {
+    margin: 5px;
+}
+
+.hex-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #FFF;
+    padding: 50px;
+    z-index: 1001;
+    border: 3px solid black;
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0 0 0 / 43%);
+    z-index: 1000;
 }
 
 *,
@@ -296,7 +343,6 @@ html, body {
     align-items: center;
     width: 100%;
     padding: 20px;
-    position: absolute;
 }
 
 .admin-page-btn {
@@ -311,4 +357,35 @@ html, body {
     font-size: 17px;
     cursor: pointer;
     margin: 10px;
+}
+
+.form-signin {
+    max-width: 330px;
+        padding: 15px;
+}
+
+.form-signin .form-floating:focus-within {
+    z-index: 2;
+}
+
+.form-signin .username {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.omni-list-card img {
+    height: 200px;
+    object-fit: contain;
+}
+
+.omni-list-card .card-text {
+    height: 130px;
+    overflow: auto;
 }
