--- a/app/frontend/static/css/index.css
+++ b/app/frontend/static/css/index.css
@@ -109,6 +109,62 @@ html, body {
     border: 3px solid black;
 }
 
+.omni-details-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #FFF;
+    padding: 50px;
+    z-index: 1001;
+    border-radius: 6px;
+    width: 50vw;
+    /* height: 50vh; */
+}
+
+.omni-details-modal 
+.omni-details-modal-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.omni-details-modal 
+.omni-details-modal-container 
+.omni-title {
+    font-size: 25px;
+    font-weight: bold;
+    padding: 0px 10px 20px 10px;
+}
+
+.omni-details-modal 
+.omni-details-modal-container 
+.content-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
+.omni-details-modal 
+.omni-details-modal-container 
+.content-container 
+.details-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.omni-details-modal 
+.omni-details-modal-container 
+.content-container 
+.details-container 
+span {
+    padding: 10px;
+}
+
 .modal-overlay {
     position: fixed;
     top: 0;
