--- a/app/frontend/templates/frontend/index.html
+++ b/app/frontend/templates/frontend/index.html
@@ -7,39 +7,22 @@
         {% load static %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-        {% comment %} <script src="{% static "js/hyper-config.js" %}"></script> {% endcomment %}
-
         <!-- CSS only -->
         <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}" />
-
-        {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> {% endcomment %}
-
-        <!-- App favicon -->
-        <link rel="shortcut icon" href="{% static "assets/images/favicon.ico" %}">
-
-        <!-- Theme Config Js -->
-        <script src="{% static "assets/js/hyper-config.js" %}"></script>
 
         <!-- Icons css -->
         <link href="{% static "assets/css/icons.min.css" %}" rel="stylesheet" type="text/css" />
 
-        <!-- App css -->
-        <link href="{% static "assets/css/app-modern.min.css" %}" rel="stylesheet" type="text/css" id="app-style" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+        <!-- App favicon -->
+        <link rel="shortcut icon" href="{% static "assets/images/favicon.ico" %}">
     </head>
     <body class="show">
-        <div class="wrapper">
-            <div id="main">
-                <div id="app"></div>
-                <div id="portal"></div>
-            </div>
-        </div>
-
-        <!-- Vendor js -->
-        <script src="{% static "assets/js/vendor.min.js" %}"></script>
-
-        <!-- App js -->
-        <script src="{% static "assets/js/app.min.js" %}"></script>
-        
+        <div id="main">
+            <div id="app"></div>
+            <div id="portal"></div>
+        </div> 
         <script src="{% static "frontend/main.js" %}"></script>
     </body>
 </html>
